--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:replace="${title}">管理后台</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
+    <link href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css"/>
 </head>
 <body>
@@ -13,9 +13,11 @@
     <div class="ui container">
         <div class="ui inverted secondary stackable menu">
             <h2 class="ui yellow header item">酒店管理系统</h2>
-            <a href="#" th:href="@{/hotel}" class="m-item item m-mobile-hide" th:classapend="${n==0}? 'active'">首页
+            <a href="#" th:href="@{/hotel}" class="m-item item m-mobile-hide" th:classappend="${n==0}? 'active'">首页
             </a>
-            <a href="#" th:href="@{/hotel/room}" class="m-item item m-mobile-hide" th:classapend="${n==1}? 'active'">房间预订
+            <a href="#" th:href="@{/hotel/room}" class="m-item item m-mobile-hide" th:classappend="${n==1}? 'active'">房间预订
+            </a>
+            <a href="#"  class="m-item item m-mobile-hide" th:classappend="${n==2}? 'active'">我的订单
             </a>
             <div class="right m-item m-mobile-hide menu">
                 <div class="ui dropdown  item">
@@ -37,16 +39,18 @@
 </nav>
 
 <!--footer-->
-<footer th:fragment="footer" class="ui inverted vertical segment m-padded-tb-massive">
+<footer th:fragment="footer" class="ui inverted vertical segment m-padding">
     <div class="ui center aligned container">
-        <div class="ui inverted section divider"></div>
-        <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2020</p>
+        <p class="m-text-thin m-text-spaced m-opacity-tiny">
+            Copyright © 2020 酒店管理系统
+        </p>
+        <p class="">基于Springboot开发 <i class="heart red icon"></i> Mahuan</p>
     </div>
 </footer>
 
 <th:block th:fragment="script">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
     <script>
         $('.menu.toggle').click(function () {
