--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <!--导航-->
-<nav th:replace="_fragments::menu(1)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+<nav th:replace="_fragments::menu(0)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
         <div class="ui inverted secondary stackable menu">
             <h2 class="ui yellow header item">酒店管理系统</h2>
@@ -55,8 +55,8 @@
                 <div class="extra">
                     <div class="ui star rating" data-rating="5" data-max-rating="5"></div>
                 </div>
-                <div class="right aligned column">
-                    <a href="#" th:href="@{/hotel/room}">点击进入</a>
+                <div class="ui right floated column">
+                    <a href="#" th:href="@{/hotel/room}" class="ui blue button">查看详情</a>
                 </div>
 
             </div>
@@ -80,7 +80,7 @@
 
 </footer>
 
-<!--  <th:block th:replace="admin/_fragment::script">-->
+<!--  <th:block th:replace="_fragment::script">-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 
@@ -92,7 +92,9 @@
     $('.ui.dropdown').dropdown({
         on: 'hover'
     });
-
+</script>
+<!--  </th:block>-->
+<script>
     $('.ui.rating')
         .rating('disable', {
             initialRating: 5,
@@ -110,6 +112,5 @@
     ;
 
 </script>
-<!--  </th:block>-->
 </body>
 </html>
