--- a/src/main/resources/templates/room.html
+++ b/src/main/resources/templates/room.html
@@ -89,7 +89,7 @@
             </div>
         </form>
 
-        <div class="ui top attached teal segment relaxed divided list" >
+        <div class="ui top attached teal segment relaxed divided list">
             <div class="item m-list" th:each="room : ${rooms}">
                 <div class="ui grid">
                     <div class="eleven wide column">
@@ -103,6 +103,13 @@
                             <div class="item">
                                 <h3 class="ui red header price">¥ <span th:text="${room.price}">360</span></h3>
                             </div>
+                        </div>
+                        <div class="description">
+                            <p>床型：<span th:text="${room.typeId}">大床房</span>
+                                &nbsp;&nbsp;面积：<span th:text="${room.area}">48</span>㎡
+                                &nbsp;&nbsp;楼层：<span th:text="${room.floor}">6-7 </span>
+                                &nbsp;&nbsp;含早：<span th:text="${room.isBreakfast}==0?'不含早':'含双早'">是</span>
+                            </p>
                         </div>
                     </div>
                     <div class="right aligned five wide column">
@@ -131,7 +138,7 @@
 
 </footer>
 
-<!--  <th:block th:replace="admin/_fragment::script">-->
+<!--  <th:block th:replace="_fragment::script">-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 
@@ -143,7 +150,9 @@
     $('.ui.dropdown').dropdown({
         on: 'hover'
     });
-
+</script>
+<!--  </th:block>-->
+<script>
     $('.ui.rating')
         .rating('disable', {
             initialRating: 5,
@@ -152,7 +161,6 @@
     ;
 
 </script>
-<!--  </th:block>-->
 
 </body>
 </html>
