--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -61,5 +61,8 @@
         <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2020 酒店管理系统</p>
     </div>
 </footer>
+<!--  <th:block th:replace="_fragments::script">-->
+<!--  </th:block>-->
+
 </body>
 </html>
