--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -64,10 +64,11 @@
                 <div class="content">
                     <a class="ui header teal" th:text="${room.name}">豪华大床房</a>
                     <div class="description">
-                        <p>床型：<span th:text="${room.typeId}">大床房</span>
+                        <p>
+                            床型：<span th:text="${room.type.name}">大床房</span>
                             &nbsp;&nbsp;面积：<span th:text="${room.area}">48</span>㎡
                             &nbsp;&nbsp;楼层：<span th:text="${room.floor}">6-7 </span>
-                            &nbsp;&nbsp;含早：<span th:text="${room.isBreakfast}==0?'不含早':'含双早'">是</span>
+                            &nbsp;&nbsp;含早：<span th:text="${room.breakfast}?'含双早':'不含早'">是</span>
                         </p>
                     </div>
                     <div class="extra">
@@ -124,10 +125,12 @@
 
                 <div class="ui middle aligned two column grid">
                     <div class="column">
-                        <h3 class="ui orange m-inline-block header" th:text="${room.name}">豪华大床房</h3> x <b id="count">1</b>
+                        <h3 class="ui orange m-inline-block header" th:text="${room.name}">豪华大床房</h3> x <b
+                            id="count">1</b>
                     </div>
                     <div class="right aligned column">
-                        总计： <h2 id="price" th:attr="data-price=${room.price}" class="ui orange header m-inline-block m-text-thin" th:text="${room.price}"> 360 </h2> 元
+                        总计： <h2 id="price" th:attr="data-price=${room.price}"
+                                class="ui orange header m-inline-block m-text-thin" th:text="${room.price}"> 360 </h2> 元
                     </div>
                 </div>
 
@@ -154,13 +157,17 @@
         <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2020 酒店管理系统</p>
     </div>
 </footer>
-<!--  <th:block th:replace="_fragment::script">-->
+<!--  <th:block th:replace="_fragments::script">-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 
 <script>
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
+    });
+
+    $('.ui.dropdown').dropdown({
+        on: 'hover'
     });
 </script>
 <!--  </th:block>-->
