--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -23,7 +23,7 @@
                 <div class="ui dropdown  item">
                     <div class="text">
                         <img class="ui avatar image" src="https://cdn.v2ex.com/gravatar/10002566d7a63c11e2d42e86d2b95c85">
-                        管理员
+                        <span th:text="${session.user.name}">管理员</span>
                     </div>
                     <i class="dropdown icon"></i>
                     <div class="menu">
