--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -18,7 +18,7 @@
             <div class="right m-item m-mobile-hide menu">
                 <div class="ui dropdown item">
                     <div class="text">
-                        <img class="ui avatar image" src="https://unsplash.it/100/100?image=1005">
+                        <img class="ui avatar image" src="https://cdn.v2ex.com/gravatar/10002566d7a63c11e2d42e86d2b95c85">
                         管理员
                     </div>
                     <i class="dropdown icon"></i>
@@ -47,9 +47,9 @@
                 </div>
             </div>
             <div class="active step">
-                <i class="payment icon"></i>
+                <i class="payment teal icon"></i>
                 <div class="content">
-                    <div class="title red">填写订单</div>
+                    <div class="ui header teal title">填写订单</div>
                 </div>
             </div>
             <div class="disabled step">
@@ -65,7 +65,7 @@
                     <a class="ui header teal" th:text="${room.name}">豪华大床房</a>
                     <div class="description">
                         <p>
-                            床型：<span th:text="${room.type.name}">大床房</span>
+                            房型：<span th:text="${room.type.name}">大床房</span>
                             &nbsp;&nbsp;面积：<span th:text="${room.area}">48</span>㎡
                             &nbsp;&nbsp;楼层：<span th:text="${room.floor}">6-7 </span>
                             &nbsp;&nbsp;含早：<span th:text="${room.breakfast}?'含双早':'不含早'">是</span>
@@ -123,7 +123,7 @@
 
                 <div class="ui divider"></div>
 
-                <div class="ui middle aligned two column grid">
+                <div class="ui middle aligned two column grid m-padded">
                     <div class="column">
                         <h3 class="ui orange m-inline-block header" th:text="${room.name}">豪华大床房</h3> x <b
                             id="count">1</b>
@@ -157,7 +157,7 @@
         <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2020 酒店管理系统</p>
     </div>
 </footer>
-<!--  <th:block th:replace="_fragments::script">-->
+<th:block th:replace="_fragments::script">
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 
@@ -170,7 +170,7 @@
         on: 'hover'
     });
 </script>
-<!--  </th:block>-->
+</th:block>
 <script src="/static/lib/calendar/calendar.min.js" th:src="@{/lib/calendar/calendar.min.js}"></script>
 <script src="/static/js/booking.js" th:src="@{/js/booking.js}"></script>
 
