--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -17,7 +17,7 @@
             <div class="right m-item m-mobile-hide menu">
                 <div class="ui dropdown  item">
                     <div class="text">
-                        <img class="ui avatar image" src="https://unsplash.it/100/100?image=1005">
+                        <img class="ui avatar image" src="https://cdn.v2ex.com/gravatar/10002566d7a63c11e2d42e86d2b95c85">
                         管理员
                     </div>
                     <i class="dropdown icon"></i>
@@ -38,31 +38,28 @@
 <br>
 
 <div class="m-container-small m-padded-tb-massive">
-    <div class="ui teal center aligned message m-padded-tb-huge">
-        <div class="ui m-text-center">
-            <h2><i class="check circle icon"></i> 预订成功</h2>
+    <div th:if="${result}" class="ui blue center aligned message m-padded-tb-huge  m-text-center">
+            <h2><i class="check circle icon"></i>预订成功</h2>
             <p>感谢您入住本酒店，如有问题请联系我们！</p>
-            <a href="#" th:href="@{/hotel}" class="ui teal button">返回首页</a>
-
-
-        </div>
+            <a href="#" th:href="@{/hotel}" class="ui blue button">返回首页</a>
+    </div>
+    <div th:unless="${result}" class="ui center aligned red message m-padded-tb-huge m-text-center">
+            <h2><i class="times circle icon"></i>预订失败</h2>
+            <p>系统出现错误，请稍后再试。</p>
+            <a href="#" th:href="@{/hotel}" class="ui red button">返回首页</a>
     </div>
 </div>
 <br>
 <br>
 <br>
 <br>
-
-
-<!--底部footer-->
 <footer th:replace="_fragments::footer" class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
         <div class="ui inverted section divider"></div>
         <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2020 酒店管理系统</p>
     </div>
 </footer>
-<!--  <th:block th:replace="_fragments::script">-->
-<!--  </th:block>-->
-
+<th:block th:replace="_fragments::script">
+</th:block>
 </body>
 </html>
