--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,6 +3,10 @@ body {
     background: url("../images/bg.png");
 }
 
+.white{
+    color: #ffffff!important;
+}
+
 .m-list {
     padding: 1.5rem 1rem !important;
 }
