--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -41,10 +41,29 @@
 <!--footer-->
 <footer th:fragment="footer" class="ui inverted vertical segment m-padding">
     <div class="ui center aligned container">
+        <div class="ui inverted divided stackable grid center aligned">
+            <div class="column">
+                <a href="https://spring.io/" target="_blank" data-tooltip="SpringBoot" data-position="top center"><i class="large white envira circle icon"></i></a>
+            </div>
+            <div class="column">
+                <a href="https://semantic-ui.com/" target="_blank" data-tooltip="Semantic UI" data-position="top center"><i class="large white html5 icon"></i></a>
+            </div>
+            <div class="column">
+                <a href="https://www.jetbrains.com/idea/" target="_blank" data-tooltip="IntelliJ IDEA" data-position="top center"><i class="large white keyboard icon"></i></a>
+            </div>
+            <div class="column">
+                <a href="https://github.com/cncqw/hotel-booking" target="_blank"  data-tooltip="Github" data-position="top center"><i class="large white github icon"></i></a>
+            </div>
+            <div class="column">
+                <a href="https://opensource.org/licenses/MIT" target="_blank" data-tooltip="MIT License" data-position="top center"><i class="large white balance scale icon"></i></a>
+            </div>
+
+        </div>
+        <div class="ui inverted section divider"></div>
         <p class="m-text-thin m-text-spaced m-opacity-tiny">
             Copyright © 2020 酒店管理系统
         </p>
-        <p class="">基于Springboot开发 <i class="heart red icon"></i> Mahuan</p>
+        <p class="">The MIT License <i class="heart red icon"></i> By Mahuan</p>
     </div>
 </footer>
 
